// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BannerBox /> render BannerBox with default props 1`] = `
<div
  className="mfui-banner-box"
>
  <Banner>
    <div>
      test
    </div>
  </Banner>
</div>
`;

exports[`<BannerBox /> render BannerBox with props 1`] = `
<div
  className="mfui-banner-box"
>
  <Banner
    autoPlay={true}
    autoPlayDelay={1000}
    loop={true}
    navTheme="green"
    onChange={[MockFunction]}
    onDotClick={[MockFunction]}
    onNextClick={[MockFunction]}
    onPrevClick={[MockFunction]}
  >
    <div>
      test
    </div>
  </Banner>
</div>
`;
